# MagicRPA

./: LICENSE  MagicRPA.xmind  README.md
magic_rpa_engine/: Cargo.toml  README.md  clippy.toml  update.bat
magic_rpa_engine/src/: inspector.rs  main.rs
magic_rpa_engine/src/rpa_engine/: mod.rs
magic_rpa_engine/src/rpa_engine/rpa_automation/: mod.rs  rpa_component.rs  rpa_element.rs  rpa_element_action.rs  rpa_enum.rs  rpa_trace.rs  rpa_windows  win32_component.rs  win32_control.rs  win32_window.rs
magic_rpa_engine/src/rpa_engine/rpa_automation/rpa_java/: javaautomation.rs  javaelement.rs
magic_rpa_engine/src/rpa_engine/rpa_automation/rpa_win32/: msaaelement.rs  uia_helper.rs  uiaelement.rs  win32automation.rs
magic_rpa_engine/src/rpa_engine/rpa_common/: selector.rs
magic_rpa_engine/src/rpa_engine/rpa_core/: accessible_info.rs  error.rs  handle.rs  pinvoke.rs  point.rs  rect.rs  result.rs  rpa_enum.rs  user32plus.rs  user32x.rs
magic_rpa_engine/src/rpa_engine/rpa_win32/: uiaelement.rs  win32automation.rs
magic_rpa_engine/src/rpa_log/: log_config.rs  mod.rs
magic_rpa_engine/src/rpa_proxy/: mod.rs
magic_rpa_engine/src/rpa_proxy/spy/: element_info.rs  inspector.rs  matched_spy.rs  rpa_spy.rs  spy_context.rs  spy_target.rs  trace_data.rs  ui_spy.rs  ui_spy_settings.rs
magic_rpa_engine/src/rpa_windows/: highlight_windows.rs  mod.rs
