[package]
name = "magic_rpa_egine"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[dependencies]
sysinfo = "0.29.3"
uiautomation = "0.5.6"
log="0.4.18"

