[package]
name = "magic_rpa_egine"
version = "1.1.0"
edition = "2021"
keywords = ["rpa"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[dependencies]
sysinfo = "0.29.8"
uiautomation = "0.6.1"
log="0.4.20"  
env_logger="0.10.0"
strum = "0.25"
strum_macros = "0.25.2"

[dependencies.windows]
version = "0.51.1"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_Shell_PropertiesSystem",
    "UI_UIAutomation"
]
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
