[package]
name = "magic_rpa_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
uiautomation = "0.18"
globle_hook = { path = "./globle_hook", version = "0.1.0" }

autoit_wrapper = { path = "./autoit_wrapper", version = "0.1.0" }

log = "0.4.27"
log4rs = { version = "1.2", features = ["yaml_format", "all_components"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_Shell_PropertiesSystem",
    "UI_UIAutomation",
    "Win32_System_Variant",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
    "implement"
]
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3




